		Markbook: fixed uploaded response file selector gigantism issue
		Markbook: added line break display to full comment in various viewing locations
		Planner: fixed surplus slash issue in Crowd Assessment settings in Lesson Planner add page
		Planner: fixed style mismatch in Guest section of lesson planner full view
		Planner: attendance alignment tweak
		School Admin: fixed bug preventing non-contiguous primary external assessment settings from being saved in Formal Assessment settings
		Students: added year group to New Students report when using Date Range setting 
		Students: added All Students filter persistence to Back To Search link on student details page
		Students: made more fields searchable in full profile
		Students: fixed bug preventing student images from showing up on History tab of student profile
		Timetable: fixed rendering to allow Sunday as first day or the week, according to values in gibbonDaysOfWeek
		Tracking: adjusted Data Points export to combine multiple column internal assessments for one subject into a column
		User Admin: added notification to form tutor(s) when a student's privacy options change (via Edit or Data Update).		
		User Admin: made max_input_vars test a little more generous
		User Admin: added link to family for each user in User Admin screen, making it easier to find students based on parents
		User Admin: fixed bug preventing family import
		
v11.0.00
--------
	Headlines
		New Tracking modules adds longitudinal graphing and data exports of student assessment data
		New Formal Assessment module facilitates teacher-inputted, school-wide Internal Assessments, and incorporates old External Assessment module
		New custom fields feature allows easy creation of new user fields for use in User Admin, Application Form, Data Updater and Students modules
		Improved user import functionality allows operation in both sync and import modes
		Additional parent interfaces give access to Behaviour and Finance information